# crispy-umbrella

./: .editorconfig  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
device_info_gathering_service/: manage.py
device_info_gathering_service/core/: models.py  serializers.py  urls.py  views.py
device_info_gathering_service/core/migrations/: 0001_initial.py
device_info_gathering_service/device_info_gathering_service/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: populate_db.py
src/apps/common/: models.py
src/base/: asgi.py  settings.py  wsgi.py
src/src/: settings.py
