[tool.poetry]
name = "crispy-umbrella"
version = "0.1.0"
description = ""
authors = ["Sushant Chaudhary <csush.95@gmail.com>"]
readme = "README.md"
packages = [{include = "crispy_umbrella"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
